<resources>
    <string name="app_name">AndroidStudyProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_study">ViewStudyActivity</string>
    <string name="title_activity_self_create">SelfCreateActivity</string>
    <string name="title_activity_linear_layout">LinearLayoutActivity</string>


    <string name="tip">提示信息</string>
    <string name="linearlayoutbutton1">按钮1</string>
    <string name="linearlayoutbutton2">按钮2</string>
    <string name="linearlayoutbutton3">按钮3</string>
    <string name="linearlayoutbutton4">按钮4</string>
    <string name="linearlayoutbutton5">按钮5</string>
    <string name="title_activity_table_layout">TableLayoutActivity</string>
    <string name="title_activity_frame_layout">FrameLayoutActivity</string>
    <string name="title_activity_relative_layout">RelativeLayoutActivity</string>
    <string name="title_activity_grid_layout">GridLayoutActivity</string>
    <string name="title_activity_text_view">TextViewActivity</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="title_activity_button">ButtonActivity</string>

    <string name="title_activity_expandable_list_view">ExpandableListViewActivity</string>
    <string name="title_activity_seek_bar">SeekBarActivity</string>
    <string name="title_activity_view_swicher">ViewSwicherActivity</string>
    <string name="title_activity_image_switcher">ImageSwitcherActivity</string>
    <string name="title_activity_text_switcher">TextSwitcherActivity</string>
    <string name="title_activity_view_flipper">ViewFlipperActivity</string>

    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="title_activity_image_button">ImageButtonActivity</string>
    <string name="title_activity_array_list_view">ArrayListViewActivity</string>
    <string name="title_activity_extends_list">ExtendsListActivity</string>
    <string name="title_activity_simple_adepter">SimpleAdepterActivity</string>
    <string name="title_activity_base_adapter">BaseAdapterActivity</string>
    <string name="title_activity_auto_complete_text">AutoCompleteTextActivity</string>
    <string name="title_activity_grid_view">GridViewActivity</string>

    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="title_activity_adapter_view_flipper">AdapterViewFlipperActivity</string>
    <string name="title_activity_stack_view">StackViewActivity</string>
    <string name="title_activity_progress_bar">ProgressBarActivity</string>

    <string name="title_activity_toast">ToastActivity</string>
    <string name="title_activity_picker">PickerActivity</string>
    <string name="title_activity_search_view">SearchViewActivity</string>
    <string name="title_activity_tab_host">TabHostActivity</string>
    <string name="title_activity_scroll_view">ScrollViewActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_other">Other</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_self_view_dialog">SelfViewDialogActivity</string>
    <string name="title_activity_theme_view_dialog">ThemeViewDialogActivity</string>
    <string name="title_activity_popup_window">PopupWindowActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_menu_function">MenuFunctionActivity</string>
    <string name="title_activity_context_menu">ContextMenuActivity</string>
    <string name="title_activity_xmlmenu">XMLMenuActivity</string>
    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">18号字体</string>
    <string name="plain_item">普通菜单项</string>
    <string name="font_color">字体颜色</string>
    <string name="red_font">红色字体</string>
    <string name="green_font">绿色字体</string>
    <string name="blue_font">蓝色字体</string>
    <string name="red_title">红色字体</string>
    <string name="green_title">绿色字体</string>
    <string name="blue_title">蓝色字体</string>
    <string name="font_size">字体大小</string>
    <string name="title_activity_popup_menu">PopupMenuActivity</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="title_activity_action_bar_test">ActionBarTestActivity</string>
    <string name="title_activity_action_bar_item">ActionBarItemActivity</string>
    <string name="title_activity_action_bar_home">ActionBarHomeActivity</string>
    <string name="title_activity_action_bar_home_first">ActionBarHomeFirstActivity</string>
    <string name="title_activity_action_bar_home_second">ActionBarHomeSecondActivity</string>
    <string name="title_activity_action_bar_view">ActionBarViewActivity</string>
    <string name="title_activity_action_bar_tab">ActionBarTabActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_acrion_bar_drop_down">AcrionBarDropDownActivity</string>
    <string name="title_activity_async_task">AsyncTaskActivity</string>
    <string name="title_activity_handler">HandlerActivity</string>
    <string name="title_activity_handler_in_child">HandlerInChildActivity</string>
    <string name="title_activity_lancher_activity_case">LancherActivityCaseActivity</string>
    <string name="title_activity_expandable_list_test">ExpandableListTestActivity</string>
    <string name="title_activity_preference_test">PreferenceTestActivity</string>
    <string name="title_activity_bundle_test">BundleTestActivity</string>
    <string name="title_activity_result_bundle">ResultBundleActivity</string>
    <string name="title_activity_activity_for_result">ActivityForResultActivity</string>
    <string name="title_activity_select_city">SelectCityActivity</string>
    <string name="title_activity_static_use_fragment">StaticUseFragmentActivity</string>
    <string name="title_activity_study_fragment">studyFragmentActivity</string>
    <string name="title_activity_show_new">ShowNewActivity</string>
    <string name="title_activity_dynamic_fragment">DynamicFragmentActivity</string>
    <string name="title_activity_fragment_connect">FragmentConnectActivity</string>
    <string name="title_activity_book_two_pane">BookTwoPaneActivity</string>
    <string name="title_activity_fragment_to">FragmentToActivityActivity</string>
    <string name="title_activity_fragment_to_fragment">FragmentToFragmentActivity</string>
    <string name="title_activity_intent">IntentActivity</string>
    <string name="title_activity_intent_result">IntentResultActivity</string>
    <string name="title_activity_category_test">CategoryTestActivity</string>
    <string name="title_activity_over_write_data_type">OverWriteDataTypeActivity</string>
    <string name="title_activity_intent_data">IntentDataActivity</string>
    <string name="title_activity_both_type_and_data">BothTypeAndDataActivity</string>
    <string name="title_activity_scheme_intent">SchemeIntentActivity</string>
    <string name="title_activity_attribute_study">AttributeStudyActivity</string>
    <string name="title_activity_handler_in_main">HandlerInMainActivity</string>
    <string name="title_activity_handler_in_main2">HandlerInMain2Activity</string>
    <string name="title_activity_save_data">SaveDataActivity</string>
    <string name="title_activity_save_study">SaveStudyActivity</string>
    <string name="title_activity_save_study_shared_preference">SaveStudySharedPreferenceActivity
    </string>
    <string name="title_activity_save_study_file">SaveStudyFileActivity</string>
    <string name="title_activity_save_study_sd">SaveStudySDActivity</string>
    <string name="title_activity_save_study_sqlite">SaveStudySQLITEActivity</string>
    <string name="title_activity_maps_study">Map</string>
    <string name="title_activity_content_provider">ContentProviderActivity</string>
    <string name="title_activity_content_provider_simple">ContentProviderSimpleActivity</string>

    <string name="title_activity_content_provider_db">ContentProviderDBActivity</string>

    <string name="title_activity_service_study">ServiceStudyActivity</string>
    <string name="title_activity_simple_service">SimpleServiceActivity</string>
    <string name="title_activity_bind_service">BindServiceActivity</string>
    <string name="title_activity_broad_cast_receiver">BroadCastReceiverActivity</string>
    <string name="title_activity_normal_broadcast">NormalBroadcastActivity</string>
    <string name="title_activity_order_broadcast">OrderBroadcastActivity</string>
    <string name="title_activity_transfor_service_broadcast">TransforServiceBroadcastActivity
    </string>

</resources>
