<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:gravity="top"
    tools:context="com.oocl.manlimeng.androidstudyproject.UIActivity.LinearLayoutActivity">
    <Button
        android:layout_width="wrap_content"
        android:text="@string/linearlayoutbutton1"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/linearlayoutbutton2"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/linearlayoutbutton3"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/linearlayoutbutton4"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/linearlayoutbutton5"
        android:layout_height="wrap_content" />

</LinearLayout>
